feat: [AH-994]: Updated Client setup details. Update pypi to python (#3547)
* Merge branch 'main' of https://git0.harness.io/l7B_kbSEQD2wjrM7PShm5w/PROD/Harness_Commons/gitness into AH-994-client-setup-details-update
* [AH-994]: Merge conflict fixed
* [AH-994]: Merge conflict fixed
* [AH-994]: Updated makefile
* [AH-994]: Merge conflict fixed
* [AH-994]: Updated Client setup details. Update pypi to python
