# registry/app/api/openapi/contracts/artifact/types.gen.go
@@ -1,6 +1,6 @@
 // Package artifact provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen/v2 version v2.1.0 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package artifact
 
 import (
@@ -30,7 +30,7 @@ const (
 	PackageTypeGENERIC PackageType = "GENERIC"
 	PackageTypeHELM    PackageType = "HELM"
 	PackageTypeMAVEN   PackageType = "MAVEN"
-	PackageTypePYPI    PackageType = "PYPI"
+	PackageTypePYTHON  PackageType = "PYTHON"
 )
 
 // Defines values for RegistryType.
@@ -478,8 +478,8 @@ type MavenArtifactDetailConfig struct {
 // PackageType refers to package
 type PackageType string
 
-// PyPiArtifactDetailConfig Config for pypi artifact details
-type PyPiArtifactDetailConfig struct {
+// PythonArtifactDetailConfig Config for python artifact details
+type PythonArtifactDetailConfig struct {
 	ArtifactId *string `json:"artifactId,omitempty"`
 	GroupId    *string `json:"groupId,omitempty"`
 }
@@ -1359,25 +1359,25 @@ func (t *ArtifactDetail) MergeMavenArtifactDetailConfig(v MavenArtifactDetailCon
 	return err
 }
 
-// AsPyPiArtifactDetailConfig returns the union data inside the ArtifactDetail as a PyPiArtifactDetailConfig
-func (t ArtifactDetail) AsPyPiArtifactDetailConfig() (PyPiArtifactDetailConfig, error) {
-	var body PyPiArtifactDetailConfig
+// AsPythonArtifactDetailConfig returns the union data inside the ArtifactDetail as a PythonArtifactDetailConfig
+func (t ArtifactDetail) AsPythonArtifactDetailConfig() (PythonArtifactDetailConfig, error) {
+	var body PythonArtifactDetailConfig
 	err := json.Unmarshal(t.union, &body)
 	return body, err
 }
 
-// FromPyPiArtifactDetailConfig overwrites any union data inside the ArtifactDetail as the provided PyPiArtifactDetailConfig
-func (t *ArtifactDetail) FromPyPiArtifactDetailConfig(v PyPiArtifactDetailConfig) error {
-	t.PackageType = "PYPI"
+// FromPythonArtifactDetailConfig overwrites any union data inside the ArtifactDetail as the provided PythonArtifactDetailConfig
+func (t *ArtifactDetail) FromPythonArtifactDetailConfig(v PythonArtifactDetailConfig) error {
+	t.PackageType = "PYTHON"
 
 	b, err := json.Marshal(v)
 	t.union = b
 	return err
 }
 
-// MergePyPiArtifactDetailConfig performs a merge with any union data inside the ArtifactDetail, using the provided PyPiArtifactDetailConfig
-func (t *ArtifactDetail) MergePyPiArtifactDetailConfig(v PyPiArtifactDetailConfig) error {
-	t.PackageType = "PYPI"
+// MergePythonArtifactDetailConfig performs a merge with any union data inside the ArtifactDetail, using the provided PythonArtifactDetailConfig
+func (t *ArtifactDetail) MergePythonArtifactDetailConfig(v PythonArtifactDetailConfig) error {
+	t.PackageType = "PYTHON"
 
 	b, err := json.Marshal(v)
 	if err != nil {
@@ -1411,8 +1411,8 @@ func (t ArtifactDetail) ValueByDiscriminator() (interface{}, error) {
 		return t.AsHelmArtifactDetailConfig()
 	case "MAVEN":
 		return t.AsMavenArtifactDetailConfig()
-	case "PYPI":
-		return t.AsPyPiArtifactDetailConfig()
+	case "PYTHON":
+		return t.AsPythonArtifactDetailConfig()
 	default:
 		return nil, errors.New("unknown discriminator value: " + discriminator)
 	}
